# Course_5_Project

./: .env.example  README.md  pyproject.toml
data/: list_of_companies.py
src/: DataBase.py  api_connect.py  main.py
